fixed the toggle light button, was overlapping b4

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 
 .mantine-s0r4t5 {
-	position: fixed;
+	position: relative;
 	top: 0;
 	right: 0;
 	margin: 0;
